<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_date_picker_month">Month</string>
    <string name="accessibility_date_picker_week">Week</string>
    <string name="accessibility_date_picker_year">Year</string>
    <string name="accessibility_datetime_picker_date">Date</string>
    <string name="accessibility_datetime_picker_time">Time</string>
    <string name="accessibility_list_menu_button">%1$s Options</string>
    <string name="accessibility_time_picker_ampm">AM/PM</string>
    <string name="accessibility_time_picker_hour">Hour</string>
    <string name="accessibility_time_picker_milli">Millisecond</string>
    <string name="accessibility_time_picker_minute">Minute</string>
    <string name="accessibility_time_picker_second">Second</string>
    <string name="accessibility_toolbar_btn_menu">Customize and control Google Cromite</string>
    <string name="actionbar_manage_apps">Manage apps</string>
    <string name="actionbar_share">Share</string>
    <string name="actionbar_textselection_title">Text selection</string>
    <string name="actionbar_web_search">Web search</string>
    <string name="add_to_dictionary">Add to dictionary</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="autofill_long_press_passkey_option">Use a passkey</string>
    <string name="autofill_popup_content_description">Showing Autofill popup</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="color_picker_button_black">Black</string>
    <string name="color_picker_button_blue">Blue</string>
    <string name="color_picker_button_cancel">Cancel</string>
    <string name="color_picker_button_custom">Custom</string>
    <string name="color_picker_button_cyan">Cyan</string>
    <string name="color_picker_button_green">Green</string>
    <string name="color_picker_button_magenta">Magenta</string>
    <string name="color_picker_button_red">Red</string>
    <string name="color_picker_button_set">Set</string>
    <string name="color_picker_button_suggestions">Suggestions</string>
    <string name="color_picker_button_white">White</string>
    <string name="color_picker_button_yellow">Yellow</string>
    <string name="color_picker_dialog_title">Select color</string>
    <string name="color_picker_hue">Hue</string>
    <string name="color_picker_label_chosen_color">Chosen color</string>
    <string name="color_picker_saturation">Saturation</string>
    <string name="color_picker_value">Value</string>
    <string name="context_menu_copy_link_address">Copy link address</string>
    <string name="context_menu_copy_link_text">Copy link text</string>
    <string name="context_menu_open_link">Open link</string>
    <string name="copied">Copied</string>
    <string name="copy_to_clipboard_failure_message">Failed to copy to the clipboard</string>
    <string name="date_picker_dialog_clear">Clear</string>
    <string name="date_picker_dialog_other_button_label">Other</string>
    <string name="date_picker_dialog_set">Set</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_time_picker_dialog_title">Set date and time</string>
    <string name="delete_suggestion_text">Delete</string>
    <string name="elided_url_text_view_url_expanded">Url expanded</string>
    <string name="elided_url_text_view_url_truncated">Url truncated</string>
    <string name="hierarchicalmenu_a11y_default_pane_title">List menu</string>
    <string name="image_copied">Image copied</string>
    <string name="license_activity_title">System WebView licenses</string>
    <string name="link_copied">Link copied</string>
    <string name="low_memory_error">Unable to complete previous operation due to low memory</string>
    <string name="month_picker_dialog_title">Set month</string>
    <string name="opening_android_media_picker">Unable to open the photo picker</string>
    <string name="opening_file_error">Failed to open selected file</string>
    <string name="permission_denied_error">Unable to select media due to denied permissions</string>
    <string name="pointer_lock_api_notification">To show your cursor, press ESC</string>
    <string name="pointer_lock_api_notification_no_keyboard">To show your cursor, switch apps, reload the page, or go back</string>
    <string name="private_browsing_warning">This functionality is not supported in this version of Android.</string>
    <string name="profiler_error_toast">Failed to start profiler</string>
    <string name="profiler_no_storage_toast">Can\'t start profiler because external storage is not ready</string>
    <string name="profiler_started_toast">Profiler started</string>
    <string name="profiler_stopped_toast">Profiler finished. Results are in %1$s.</string>
    <string name="saving_file_error">Failed to save selected file</string>
    <string name="search_menu_title">Search</string>
    <string name="speech_recognition_service_not_found">Google speech engine can\'t be found</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submenu_header_back">Back</string>
    <string name="time_picker_dialog_am">AM</string>
    <string name="time_picker_dialog_hour_minute_separator">:</string>
    <string name="time_picker_dialog_minute_second_separator">:</string>
    <string name="time_picker_dialog_pm">PM</string>
    <string name="time_picker_dialog_second_subsecond_separator">.</string>
    <string name="time_picker_dialog_title">Set time</string>
    <string name="week_picker_dialog_title">Set week</string>
</resources>
